--- a/style/style.css
+++ b/style/style.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
 
-body {
-    width: 100%;
-}
-
 header {
     background-color: rgb(104, 102, 102);
     text-align: center;
@@ -25,11 +21,17 @@ header {
     display: none;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
     #arrow-right {
         display: none;
     }
     #arrow-down {
         display: inline-block;
+    }
+}
+
+@media (max-width: 570px) {
+    .btn {
+        font-size: 12px;
     }
 }
