Made buttons colour-coded and made that clear in the text introduction. An error message will be shown if the improper buttons are pressed. The error message will hide when the proper button is pressed.

--- a/style/style.css
+++ b/style/style.css
@@ -21,6 +21,11 @@ header {
     display: none;
 }
 
+#error {
+    font-weight: bolder;
+    display: none;
+}
+
 @media (max-width: 767px) {
     #arrow-right {
         display: none;
