--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Zetta&display=swap');
 
 header {
     background-color: rgb(104, 102, 102);
@@ -26,6 +27,10 @@ header {
     display: none;
 }
 
+.btn {
+    font-family: Lexend Zetta;
+}
+
 @media (max-width: 767px) {
     #arrow-right {
         display: none;
@@ -35,8 +40,8 @@ header {
     }
 }
 
-@media (max-width: 570px) {
+@media (max-width: 991px) {
     .btn {
-        font-size: 12px;
+        font-size: 8px;
     }
 }
